--- a/CloudService/CloudService/Base.lproj/Main.storyboard
+++ b/CloudService/CloudService/Base.lproj/Main.storyboard
@@ -1186,7 +1186,7 @@
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="9Zx-uD-s9z">
                                 <rect key="frame" x="0.0" y="131" width="375" height="443"/>
-                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
                                 <connections>
                                     <outlet property="dataSource" destination="3dY-Jo-m2V" id="5nP-Vs-VXP"/>
                                     <outlet property="delegate" destination="3dY-Jo-m2V" id="rhK-IF-wmh"/>
@@ -1319,17 +1319,17 @@
                     </navigationItem>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
-                        <segue destination="wem-eT-yqW" kind="push" id="eWE-EI-Jfp"/>
+                        <segue destination="wem-eT-yqW" kind="push" identifier="verifyCode_push" id="eWE-EI-Jfp"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hIY-YY-hN2" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1795.5" y="1774.5"/>
         </scene>
-        <!--View Controller-->
+        <!--Verify Code View Controller-->
         <scene sceneID="cMG-Bv-gtP">
             <objects>
-                <viewController id="wem-eT-yqW" sceneMemberID="viewController">
+                <viewController id="wem-eT-yqW" customClass="VerifyCodeViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="FDO-0f-oCN"/>
                         <viewControllerLayoutGuide type="bottom" id="dwc-r1-Lq0"/>
@@ -1337,14 +1337,39 @@
                     <view key="view" contentMode="scaleToFill" id="sVj-Lt-3iF">
                         <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YcM-UM-NPx">
+                                <rect key="frame" x="0.0" y="10" width="375" height="60"/>
+                                <subviews>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="CJ6-8T-GoY">
+                                        <rect key="frame" x="20" y="10" width="335" height="40"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="CJ6-8T-GoY" firstAttribute="top" secondItem="YcM-UM-NPx" secondAttribute="top" constant="10" id="5kA-t7-Ubv"/>
+                                    <constraint firstAttribute="bottom" secondItem="CJ6-8T-GoY" secondAttribute="bottom" constant="10" id="9gM-Ye-15P"/>
+                                    <constraint firstAttribute="trailing" secondItem="CJ6-8T-GoY" secondAttribute="trailing" constant="20" id="TuG-mV-ekg"/>
+                                    <constraint firstAttribute="height" constant="60" id="Ukl-rZ-Zsk"/>
+                                    <constraint firstItem="CJ6-8T-GoY" firstAttribute="leading" secondItem="YcM-UM-NPx" secondAttribute="leading" constant="20" id="xwo-lV-Ls4"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" red="0.95686274509803915" green="0.95686274509803915" blue="0.95686274509803915" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="YcM-UM-NPx" firstAttribute="top" secondItem="FDO-0f-oCN" secondAttribute="bottom" constant="10" id="0qJ-NT-488"/>
+                            <constraint firstAttribute="trailing" secondItem="YcM-UM-NPx" secondAttribute="trailing" id="3Qd-ZH-gcM"/>
+                            <constraint firstItem="YcM-UM-NPx" firstAttribute="leading" secondItem="sVj-Lt-3iF" secondAttribute="leading" id="7dB-gx-yKp"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="M7a-Dz-bwk"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="49N-94-Hi6" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2819.5" y="978.5"/>
+            <point key="canvasLocation" x="2221.5" y="1774.5"/>
         </scene>
         <!--业绩查询-->
         <scene sceneID="HuU-F7-NKA">
