--- a/CloudService/CloudService/Views/MyTeamTableViewCell.xib
+++ b/CloudService/CloudService/Views/MyTeamTableViewCell.xib
@@ -25,7 +25,7 @@
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="李四" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="snU-RP-UeT">
                         <rect key="frame" x="67" y="15" width="116.5" height="20"/>
                         <fontDescription key="fontDescription" type="system" pointSize="19"/>
-                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ID：20160215" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fgm-co-0Su">
@@ -68,6 +68,7 @@
                     <constraint firstAttribute="trailing" secondItem="0yH-HA-gga" secondAttribute="trailing" constant="20" id="ylp-hd-ybD"/>
                 </constraints>
             </tableViewCellContentView>
+            <point key="canvasLocation" x="184" y="257"/>
         </tableViewCell>
     </objects>
 </document>
