--- a/CloudService/CloudService/Base.lproj/Main.storyboard
+++ b/CloudService/CloudService/Base.lproj/Main.storyboard
@@ -1,14 +1,31 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15A2301" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="14F1605" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="moG-sH-JKE">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Navigation Controller-->
+        <scene sceneID="Od2-UD-XWg">
+            <objects>
+                <navigationController id="moG-sH-JKE" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="OcS-xo-06j">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="TNM-eQ-iE0"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Myl-sB-Nic" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-471" y="263"/>
+        </scene>
+        <!--Login View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="LoginViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,12 +33,105 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ceshi.png" translatesAutoresizingMaskIntoConstraints="NO" id="iT1-Te-c9Q">
+                                <rect key="frame" x="10" y="74" width="355" height="200"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="200" id="jPx-JF-DCD"/>
+                                </constraints>
+                            </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vHH-zz-iXo">
+                                <rect key="frame" x="31" y="294" width="313" height="80"/>
+                                <subviews>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="用户名/手机号码/邮箱" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="iJO-FG-2Ad">
+                                        <rect key="frame" x="10" y="0.0" width="293" height="40"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="密码" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Rmt-vQ-TTC">
+                                        <rect key="frame" x="10" y="40" width="293" height="40"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                </subviews>
+                                <color key="backgroundColor" red="0.94166272095959591" green="0.94166272095959591" blue="0.94166272095959591" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstItem="Rmt-vQ-TTC" firstAttribute="height" secondItem="iJO-FG-2Ad" secondAttribute="height" id="2E5-k3-qJz"/>
+                                    <constraint firstItem="iJO-FG-2Ad" firstAttribute="leading" secondItem="vHH-zz-iXo" secondAttribute="leading" constant="10" id="9Ke-bP-yDx"/>
+                                    <constraint firstAttribute="height" constant="80" id="GHY-Ta-SrM"/>
+                                    <constraint firstItem="Rmt-vQ-TTC" firstAttribute="trailing" secondItem="iJO-FG-2Ad" secondAttribute="trailing" id="LX4-aI-iW4"/>
+                                    <constraint firstItem="Rmt-vQ-TTC" firstAttribute="leading" secondItem="iJO-FG-2Ad" secondAttribute="leading" id="Rm7-VR-Mrt"/>
+                                    <constraint firstAttribute="bottom" secondItem="Rmt-vQ-TTC" secondAttribute="bottom" id="Ssb-ZX-YhJ"/>
+                                    <constraint firstAttribute="trailing" secondItem="iJO-FG-2Ad" secondAttribute="trailing" constant="10" id="xD5-7B-qWa"/>
+                                    <constraint firstItem="iJO-FG-2Ad" firstAttribute="top" secondItem="vHH-zz-iXo" secondAttribute="top" id="xpy-pV-H3I"/>
+                                    <constraint firstItem="Rmt-vQ-TTC" firstAttribute="top" secondItem="iJO-FG-2Ad" secondAttribute="bottom" id="yJK-mz-os8"/>
+                                </constraints>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KW6-Fn-8rL">
+                                <rect key="frame" x="31" y="394" width="313" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="C4I-Sq-Od3"/>
+                                </constraints>
+                                <state key="normal" title="登录">
+                                    <color key="titleColor" red="0.40943575778559516" green="0.73001499368686873" blue="0.094567116426468437" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="loginAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="uoX-OV-60M"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YbJ-cX-B4x">
+                                <rect key="frame" x="31" y="444" width="156.5" height="25"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="25" id="MaE-7I-hGr"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <state key="normal" title="忘记密码？">
+                                    <color key="titleColor" red="0.51720841610738444" green="0.5222790868535353" blue="0.5222790868535353" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="joa-O4-GUy">
+                                <rect key="frame" x="187.5" y="444" width="156.5" height="25"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <state key="normal" title="立即注册">
+                                    <color key="titleColor" red="0.52106846812140106" green="0.51947924142393198" blue="0.5222790868535353" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="joa-O4-GUy" firstAttribute="trailing" secondItem="KW6-Fn-8rL" secondAttribute="trailing" id="2nA-cN-TQo"/>
+                            <constraint firstItem="iT1-Te-c9Q" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-6" id="3Nv-Kc-dOq"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="vHH-zz-iXo" secondAttribute="trailing" constant="15" id="72X-hl-9KI"/>
+                            <constraint firstItem="vHH-zz-iXo" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="15" id="CiS-Pd-DcW"/>
+                            <constraint firstItem="joa-O4-GUy" firstAttribute="height" secondItem="YbJ-cX-B4x" secondAttribute="height" id="N7A-e4-O9s"/>
+                            <constraint firstItem="KW6-Fn-8rL" firstAttribute="leading" secondItem="vHH-zz-iXo" secondAttribute="leading" id="TcC-Vl-TCs"/>
+                            <constraint firstItem="YbJ-cX-B4x" firstAttribute="top" secondItem="KW6-Fn-8rL" secondAttribute="bottom" constant="10" id="WdV-py-5cv"/>
+                            <constraint firstItem="joa-O4-GUy" firstAttribute="top" secondItem="YbJ-cX-B4x" secondAttribute="top" id="Wob-fv-wYV"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="iT1-Te-c9Q" secondAttribute="trailing" constant="-6" id="bDP-X1-1Bk"/>
+                            <constraint firstItem="iT1-Te-c9Q" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="10" id="cHX-gY-0U4"/>
+                            <constraint firstItem="vHH-zz-iXo" firstAttribute="top" secondItem="iT1-Te-c9Q" secondAttribute="bottom" constant="20" id="cpL-Pm-iPs"/>
+                            <constraint firstItem="joa-O4-GUy" firstAttribute="width" secondItem="YbJ-cX-B4x" secondAttribute="width" id="kPH-h3-t5h"/>
+                            <constraint firstItem="joa-O4-GUy" firstAttribute="leading" secondItem="YbJ-cX-B4x" secondAttribute="trailing" id="kSm-vQ-WVU"/>
+                            <constraint firstItem="YbJ-cX-B4x" firstAttribute="leading" secondItem="KW6-Fn-8rL" secondAttribute="leading" id="kqW-e6-aCM"/>
+                            <constraint firstItem="KW6-Fn-8rL" firstAttribute="trailing" secondItem="vHH-zz-iXo" secondAttribute="trailing" id="kry-uP-kNI"/>
+                            <constraint firstItem="KW6-Fn-8rL" firstAttribute="top" secondItem="vHH-zz-iXo" secondAttribute="bottom" constant="20" id="qEW-QW-4l7"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="RaI-2t-aW9"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                    <connections>
+                        <outlet property="inputView" destination="vHH-zz-iXo" id="zkz-c9-ufw"/>
+                        <outlet property="loginBtn" destination="KW6-Fn-8rL" id="rtH-yA-4HD"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="151.5" y="308.5"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="ceshi.png" width="610" height="338"/>
+    </resources>
 </document>
